<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.squirrelframework</groupId>
    <artifactId>fsm-core</artifactId>
    <version>0.3.9-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>squirrel foundation</name>
    <description>foundation module of squirrel framework which provided event driven infrastructure and a finite state machine implementation.</description>


    <url>https://github.com/hekailiang/squirrel</url>
    <inceptionYear>2013</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.7</java.version>
        <jackson.version>2.9.3</jackson.version>
        <spring.framework.version>4.0.7.RELEASE</spring.framework.version>
    </properties>

    <developers>
        <developer>
            <id>hekailiang</id>
            <name>Henry.He</name>
            <email>hekailiang@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/hekailiang/squirrel.git</connection>
        <developerConnection>scm:git:git@github.com:hekailiang/squirrel.git</developerConnection>
        <url>https://github.com/hekailiang/squirrel.git</url>
      <tag>HEAD</tag>
  </scm>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <dependencies>
        <!-- Testing dependencies -->
        <!-- Testing dependencies -->
        <!-- Testing dependencies -->

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- jcl -> slf4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>
        <!-- slf4j impl by log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.12.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.framework.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- 虽然后期dataformat已经归到jackson中了（https://github.com/FasterXML/jackson-dataformat-yaml），但这里仍需要指定dataformat依赖 -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
            <scope>test</scope>
        </dependency>

        <!-- Project dependencies -->
        <!-- Project dependencies -->
        <!-- Project dependencies -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.framework.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>org.mvel</groupId>
            <artifactId>mvel2</artifactId>
            <version>2.1.8.Final</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-eclipse-plugin</artifactId>-->
<!--                <version>2.9</version>-->
<!--                <configuration>-->
<!--                    <downloadSources>true</downloadSources>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-source-plugin</artifactId>-->
<!--                <version>2.1.2</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-sources</id>-->
<!--                        <goals>-->
<!--                            <goal>jar-no-fork</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>2.7.1</version>-->
<!--                <configuration>-->
<!--                    &lt;!&ndash; <redirectTestOutputToFile>true</redirectTestOutputToFile> &ndash;&gt;-->
<!--                    <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>-->
<!--                    &lt;!&ndash; Force alphabetical order to have a reproducible build &ndash;&gt;-->
<!--                    <runOrder>alphabetical</runOrder>-->
<!--                    <skip>true</skip>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-release-plugin</artifactId>-->
<!--                <version>2.4.2</version>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>org.apache.maven.scm</groupId>-->
<!--                        <artifactId>maven-scm-provider-gitexe</artifactId>-->
<!--                        <version>1.9</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--                <configuration>-->
<!--                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.felix</groupId>-->
<!--                <artifactId>maven-bundle-plugin</artifactId>-->
<!--                <version>2.4.0</version>-->
<!--                <extensions>true</extensions>-->
<!--                <configuration>-->
<!--                    <instructions>-->
<!--                        <Export-Package>org.squirrelframework.*</Export-Package>-->
<!--                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>-->
<!--                    </instructions>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>
<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>release-sign-artifacts</id>-->
<!--            <activation>-->
<!--                <property>-->
<!--                    <name>performRelease</name>-->
<!--                    <value>true</value>-->
<!--                </property>-->
<!--            </activation>-->
<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-gpg-plugin</artifactId>-->
<!--                        <version>1.4</version>-->
<!--                        <configuration>-->
<!--                            <passphrase>${gpg.passphrase}</passphrase>-->
<!--                        </configuration>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>sign-artifacts</id>-->
<!--                                <phase>verify</phase>-->
<!--                                <goals>-->
<!--                                    <goal>sign</goal>-->
<!--                                </goals>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->
<!--    </profiles>-->
<!--    <distributionManagement>-->
<!--        <repository>-->
<!--            <id>sonatype-nexus-staging</id>-->
<!--            <name>Nexus Staging Repo</name>-->
<!--            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>sonatype-nexus-snapshots</id>-->
<!--            <name>Nexus Snapshot Repo</name>-->
<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
<!--        </snapshotRepository>-->
<!--    </distributionManagement>-->
</project>
